syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "operation.proto";

package pb.v1;

option java_package = "co.ledger.lama.bitcoin.transactor.protobuf";

service BitcoinTransactorService {
  rpc CreateTransaction(CreateTransactionRequest) returns (CreateTransactionResponse) {}
  rpc GenerateSignatures(GenerateSignaturesRequest) returns (GenerateSignaturesResponse) {}
  rpc BroadcastTransaction(BroadcastTransactionRequest) returns (BroadcastTransactionResponse) {}
}

enum CoinSelector {
  DEPTH_FIRST = 0;
}

message CreateTransactionRequest {
  bytes account_id = 1;
  bytes keychain_id = 2;
  CoinSelector coin_selection = 3;
  repeated PrepareTxOutput outputs = 4;
  string coinId = 5;
}

message CreateTransactionResponse {
  string hex = 1;
  string hash = 2;
  string witness_hash = 3;
  repeated Utxo utxos = 4;
}

message GenerateSignaturesRequest {
  CreateTransactionResponse raw_transaction = 1;
  string priv_key = 2;
}

message GenerateSignaturesResponse {
  repeated bytes signatures = 1;
}

message BroadcastTransactionRequest {
  bytes keychain_id = 1;
  string coin_id = 2;
  CreateTransactionResponse raw_transaction = 3;
  repeated bytes signatures = 4;
}

message BroadcastTransactionResponse {
  string hex = 1;
  string hash = 2;
  string witness_hash = 3;
}

message PrepareTxOutput {
  string address = 1;
  string value = 2;
}
